Adding of styles to component

--- a/src/App.css
+++ b/src/App.css
@@ -45,19 +45,30 @@ section {
   margin-top: 0;
 }
 
-.card--container {
+.card--list {
   display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
 }
 
 .card {
   width: 175px;
   font-size: 12px;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .card--image {
   width: 100%;
   border-radius: 9px;
   height: 260px;
+}
+
+.card--title {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card--stats {
