--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ section {
 }
 
 .card {
+  position: relative;
   width: 175px;
   font-size: 12px;
   flex: 0 0 auto;
@@ -78,4 +79,14 @@ section {
 
 .card--star {
   height: 14px;
+}
+
+.card--badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
