--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+main {
+  padding: 36px;
+}
+
+/* Airbnb styles */
 nav {
   height: 70px;
   display: flex;
@@ -75,6 +80,7 @@ section {
 .card--stats {
   display: flex;
   align-items: center;
+  margin-top: 8px;
 }
 
 .card--star {
@@ -89,4 +95,52 @@ section {
   padding: 5px 7px;
   border-radius: 2px;
   font-weight: bold;
+}
+
+/* Meme generator styles*/
+.header {
+  display: flex;
+  align-items: center;
+  height: 65px;
+  color: white;
+  padding: 20px;
+  background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+}
+
+.header--image {
+  height: 100%;
+  margin-right: 6px;
+}
+
+.header--title {
+  font-size: 1.25rem;
+  margin-right: auto;
+}
+
+.header--project {
+  font-size: 0.75rem;
+  font-weight: 500;
+}
+
+.form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 17px;
+}
+
+.form--inputs {
+  /* font-family: "Karla", sans-serif; */
+  border-radius: 5px;
+  border: 1px solid #D5D4D8;
+  text-indent: 5px;
+}
+
+.form--button {
+  grid-column: 1 / -1;
+  /* font-family: "Karla", sans-serif; */
+  border-radius: 5px;
+  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+  color: white;
+  border: none;
+  cursor: pointer;
 }
