--- a/src/App.css
+++ b/src/App.css
@@ -145,6 +145,32 @@ section {
   cursor: pointer;
 }
 
+.meme {
+  height: 500px;
+  position: relative;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
 .meme--image {
+  position: absolute;
   max-width: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.meme--text_top {
+  position: absolute;
+  right: 10px;
+  right: 50%;
+  z-index: 100;
+  color: green;
+}
+
+.meme--text_bottom {
+  position: absolute;
+  bottom: 10px;
+  right: 50%;
+  z-index: 100;
+  color: red;
 }
